--- a/202305140001.md
+++ b/202305140001.md
@@ -1,8 +1,8 @@
-# 土地财政的不可持续分析
+# 土地财政不可持续和建筑学的关系分析
 
 摘要
 
-  根据黑格尔的辩证法城市属于**人造自然**的范畴因此具有监狱性，后面会论述它的产生原理主要是空间分配的法哲学原理中人造法是一种教条主义，所以会导致空间的自由性受到制约；根据克莱顿的**破坏式创新理**论，披着效率主义的项目包装，是一种右倾，有可能损害公平，和形成跨越式的激进和空间的挥霍性；根据幂律分布和**帕累托最优**，如果无法将无产阶级和无用阶级纳入到空间分配的劳动和交易所得的范畴，整体空间经济的改革的成果就会失去，因为富人部分和穷人部分的空间产业链条是一个有机体。如何将所有阶层的人群纳入空间要素的社会闲暇换算，是空间经济学中要解决的主要社会科学上的主要矛盾问题。
+  根据黑格尔的辩证法城市属于**人造自然**的范畴因此具有监狱性，后面会论述为什么人造自然在建筑学上会形成一种教条主义，所以会导致空间的自由性受到制约；根据克莱顿的**破坏式创新理**论，为什么项目包装，本质上是破坏式创新，属于一种设计性的挥霍；根据幂律分布和**帕累托最优**的理论，如果无法将无产阶级和无用阶级纳入到空间分配的劳动和交易所得的范畴，整体空间经济的改革的成果就会失去，因为富人部分和穷人部分的空间产业链条是一个有机体。如何将所有阶层的人群纳入空间要素的社会闲暇换算，是空间经济学中要解决的主要社会科学上的主要矛盾问题。
 
   空间有其分配学上的**空间要素资料**，空间要素分配中的**时间性**和**阶级性**，决定了所有社会阶层能否纳入到城市发展生命周期，而建筑学的知识不关心这个棘手的问题，由于建筑学它们自己的一套，会形成**知识诅咒**，知识诅咒造成了转移了解决问题的注意力；价值排序和价值比例，时间发展预测的链条和次序，决定了城市能否解放空间经济的时间性和阶级性，时间性是指空间发展的**效率公平自由**的顺序，阶级性是指要将**无产阶级**和科技性失业的**无用阶级纳**入到空间要素资料的分配中。
 
@@ -14,11 +14,11 @@
 
   可经营和可生产性质的空间能创造正外部性并解放城市的效率，以**空间换时间**，但是建筑学那一套自上而下的多规和一，很少站在空间经济的角度考虑能创造正外部性的空间，因此常常因为本身的知识诅咒，单一向度欠缺考虑过于粗放的挥霍空间的项目包装，也挥霍空间的社会剩余闲暇，进而影响城市设计的解放性。
 
-  空间分配的步骤是**价值排序**和**价值比例**，价值排序前的步骤是找出关键性问题，由于建筑学存在一套它自己的考虑问题的模板，但是这套模板关心的不是“房间里的大象”而是一些不关键的问题。因此造成问题被转移注意力。价值排序有两个最重要维度，是**时间性**和**阶级性**。
+  空间分配的步骤是**价值排序**和**价值比例**，价值排序前的步骤是找出关键性问题，但是由于建筑学学常常是遵循它学科的模板，利用土地和空间定义。由于建筑学没有反转基准问题进行批判性的思考。因此常常造成设计出来的方案并未服务于其主体需要考虑的人民。
   
-  空间规划的时间性中**效率公平自由**三者不可兼得是空间分配上的定律，这个方面的问题需要用**帕累托最优**的比例对产业结构具体分配在哪个空间进行推理；
+  空间规划的时间性中存在二律背反的不可调和和寻找**帕累托最优**的困难；
   
-  空间分配的阶级性中，对各个社会阶层所分配的空间和产业链条所推理的空间进行两个维度的价值排序**，和价值比例的计算面积，不是不是精致的工具理性，例如以人工智能为手段的工具理性的建筑设计常常忽略到社会学或者贫富问题等主要价值考虑的面向，社会总闲暇不能通过人工智能等工具理性产生，只能通过价值理性的分配产生，个人总闲暇是通过其他个体的时间性而产生，这就是为什么经济滞涨时期依然贫困，依然内卷，并依然缺乏个人闲暇时间，从设计上来说工具理性全面压倒了价值理性引发了在效率公平自由这个维度和社会阶层维度的考虑严重欠缺。
+  在空间的阶级分配中，对各个社会阶层所分配的空间和产业链条所推理的空间进行两个维度的价值排序**，和价值比例的计算面积，不是不是精致的工具理性，例如以人工智能为手段的工具理性的建筑设计常常忽略到社会学或者贫富问题等主要价值考虑的面向，社会总闲暇不能通过人工智能等工具理性产生，只能通过价值理性的分配产生，个人总闲暇是通过其他个体的时间性而产生，这就是为什么经济滞涨时期依然贫困，依然内卷，并依然缺乏个人闲暇时间，从设计上来说工具理性全面压倒了价值理性引发了在效率公平自由这个维度和社会阶层维度的考虑严重欠缺。
 
    建筑师需要**反对工具理性破坏价值理性**，当下既要对多一刀切的政策也需提出纯粹理性批判，建筑学要成为科学就需要实现二分法，反对概念的历史运动，转变为人民的意识驱动，引导无产阶级和即将技术性失业的无用阶级纳入到空间要素，和空间劳动分配的范畴中
 
@@ -53,16 +53,16 @@
 
 [人造自然为什么会奴役社会，建筑学为什么会造成教条主义;](人造自然为什么会奴役社会，规范为什么会造成制约.md)
 
-[城市的监狱性，秩序诞生的原理](城市的监狱性，秩序诞生的原理.md)
+[城市的监狱性产生的原理](城市的监狱性，秩序诞生的原理.md)
 
-[价值排序前，为什么要反对概念的历史运动;](价值排序前，为什么要反对概念的历史运动.md)
-
-
-
-[为什么要反对空间分类法;](20221122.md)
+[价值排序前，为什么要反对概念对设计立法;](价值排序前，为什么要反对概念的历史运动.md)
 
 
-[按照形式逻辑分类的空间阶级;](20221208.md)
+
+[使用“反对空间分类法”;](20221122.md)
+
+
+[空间阶级所有的形式逻辑分析;](20221208.md)
 
 [从土地财政到空间经济的逻辑和未来的问题;](20230118002.md)
 
