--- a/202305140001.md
+++ b/202305140001.md
@@ -2,13 +2,13 @@
 
 摘要
 
-  根据黑格尔的辩证法城市属于**人造自然**的范畴因此具有监狱性，后面会论述为什么人造自然在建筑学上会形成一种教条主义，所以会导致空间的自由性受到制约；根据克莱顿的**破坏式创新理**论，为什么项目包装，本质上是破坏式创新，属于一种设计性的挥霍；根据幂律分布和**帕累托最优**的理论，如果无法将无产阶级和无用阶级纳入到空间分配的劳动和交易所得的范畴，整体空间经济的改革的成果就会失去，因为富人部分和穷人部分的空间产业链条是一个有机体。如何将所有阶层的人群纳入空间要素的社会闲暇换算，是空间经济学中要解决的主要社会科学上的主要矛盾问题。
+  根据黑格尔的辩证法城市属于**人造自然**的范畴，因此城市具有监狱性，后面会论述为什么人造自然在建筑学上会形成一种教条主义，所以会导致空间的自由性受到制约；根据克莱顿的**破坏式创新理**论，后文会解释为什么项目包装，本质上是破坏式创新，属于一种设计性的挥霍；根据幂律分布和**帕累托最优**的理论，如果无法将无产阶级和无用阶级纳入到空间分配的劳动和交易所得的范畴，整体空间经济的改革的成果就会失去，因为富人部分和穷人部分的空间产业链条是一个有机体。如何将所有阶层的人群纳入空间要素的社会闲暇换算，是空间经济学中要解决的主要社会科学上的主要矛盾问题。
 
   空间有其分配学上的**空间要素资料**，空间要素分配中的**时间性**和**阶级性**，决定了所有社会阶层能否纳入到城市发展生命周期，而建筑学的知识不关心这个棘手的问题，由于建筑学它们自己的一套，会形成**知识诅咒**，知识诅咒造成了转移了解决问题的注意力；价值排序和价值比例，时间发展预测的链条和次序，决定了城市能否解放空间经济的时间性和阶级性，时间性是指空间发展的**效率公平自由**的顺序，阶级性是指要将**无产阶级**和科技性失业的**无用阶级纳**入到空间要素资料的分配中。
 
-  西方通过**马克斯韦伯**所讲的原理进行私有化为主的城市建设和实践，东方通过**修正后的马克思主义**的经济原理进行实践，但目前来说积累的危机性，都已经挤压到近乎无法持续
+  如何通过**马克斯韦伯**的新教伦理与资本主义精神分析现在，**后的马克思主义时代**的土地和房屋的经济原理模式，和解释空间经济被挤压到近乎无法持续的原理
 
-  根据**空间的法哲学原理**，建筑学存在单一学科造成的知识诅咒，一方面是规范不是**普通法**和**自然法**，而属于**人造法**的范畴，造成了一种所谓的**教条主义**左倾，这个会在后面论述；基于空间的信贷模型，多规和一和一刀切不是绝对真理，披着效率创造的**社会总闲暇**，倾向于形成以本体论运行下产生的必然性的加剧社会的不公平性，形成一种项目包装一样的挥霍性的右倾，这个也会在后面论述
+  如何通过**法哲学原理**，解构建筑学存在的单一学科和多学科并行为主体而造成的知识诅咒，如何对建筑规范进行批判性思维，区分**普通法**，**自然法**，成文法和的**教条**的规定；如何基于空间的信贷模型，反思为什么城市规划上的“多规和一”不是绝对的真理，为什么效率创造的**社会总闲暇**，倾向于形成以本体论运行下产生的必然性的加剧社会的不公平性，基于公平以解决挥霍性的右倾，该以什么基本点为立足的根基
 
   基于**正外部性**理论，建筑设计时常不关心了经营，可生产，可产业链的空间，具有劳动和价值链发展和运动的流动性的空间，而建筑学自己有一套所谓的静态的空间分类法的习惯，学所俘获的在学科上认为的政治正确的空间划分和定义方法；
 
