--- a/202305140001.md
+++ b/202305140001.md
@@ -6,7 +6,7 @@
 
   空间有其分配学上的**空间要素资料**，空间要素分配中的**时间性**和**阶级性**，决定了所有社会阶层能否纳入到城市发展生命周期，而建筑学的知识不关心这个棘手的问题，由于建筑学它们自己的一套，会形成**知识诅咒**，知识诅咒造成了转移了解决问题的注意力；价值排序和价值比例，时间发展预测的链条和次序，决定了城市能否解放空间经济的时间性和阶级性，时间性是指空间发展的**效率公平自由**的顺序，阶级性是指要将**无产阶级**和科技性失业的**无用阶级纳**入到空间要素资料的分配中。
 
-  如何通过**马克斯韦伯**的新教伦理与资本主义精神分析现在，**后的马克思主义时代**的土地和房屋的经济原理模式，和解释空间经济被挤压到近乎无法持续的原理
+  如何通过**马克斯韦伯**的新教伦理与资本主义精神分析现在，**后的马克思主义时代**的土地和房屋的经济原理模式，和解释空间经济被挤压到近乎无法持续的过程和建筑学的关系
 
   如何通过**法哲学原理**，解构建筑学存在的单一学科和多学科并行为主体而造成的知识诅咒，如何对建筑规范进行批判性思维，区分**普通法**，**自然法**，成文法和的**教条**的规定；如何基于空间的信贷模型，反思为什么城市规划上的“多规和一”不是绝对的真理，为什么效率创造的**社会总闲暇**，倾向于形成以本体论运行下产生的必然性的加剧社会的不公平性，基于公平以解决挥霍性的右倾，该以什么基本点为立足的根基
 
@@ -22,7 +22,7 @@
 
    建筑师需要**反对工具理性破坏价值理性**，当下既要对多一刀切的政策也需提出纯粹理性批判，建筑学要成为科学就需要实现二分法，反对概念的历史运动，转变为人民的意识驱动，引导无产阶级和即将技术性失业的无用阶级纳入到空间要素，和空间劳动分配的范畴中
 
-  空间的设计上也需要**反对空间分类法**，提倡**时间演绎法**，这个在后面也会论述。空间分类法是一种过于僵化的方法，空间分类法造成**概念的历史运动**大行其道。概念形成的方案，一方面没有触及主体**人民意识**问题的特征，一方面翻来覆去形成破坏式创新。因此设计的关键词一开始需要回到主体人民的意识上来考虑。
+  空间的设计上也需要**反对空间分类法**，提倡**演绎法进行设计**，这个在后面也会论述。空间分类法为什么会由于概念运动进而造成，空间分类法造成**概念的历史运动**无法服务于主体**人民意识**的问题特征，一方面翻来覆去形成破坏式创新。因此设计的关键词一开始需要回到主体人民的意识上来考虑。
 
   空间推理法是指抽象推理，将空间的运用分为**空间换时间**和**时间换空间**的过程。空间换时间是租用空间以生产和商品交易换时间产生社会闲暇，时间换空间是债务买房以换取阶层性的过程。由于建筑学那一套知识体系不是推理法形成的产业链条逻辑，也不是人民意识逻辑，所以学科表现出来的就是自己形成一套先验的体系，并且还在**本体论**之内运行。本体论是指已经在运行的一套系统正在对外部系统夹缝中的生存空间正在产生碾压。
 
@@ -34,11 +34,11 @@
   
   建设性推翻的方案，有时具有朴素性，可能建筑不顾及规范，形式，这些细枝末节的问题。而主要关注结构性改革能不能跑赢就可能会爆发的土地革命，归根结底建筑学体系到了一种自身需要死亡自己的历史时刻中，简政放权往往发挥效应，因为城市的本质是"间域"，解放城市的方式是市场交易，关于城市的监狱性的本质，会在后面的论述中“秩序的产生”这一章去论述。
   
-  有秩序的市场交易产生了城市的**正外部性**，正外部性也可以简单的理解为**熵增理论**，正外部性可以简单的理解为一个生产和经营的空间通过吸引人流，或者流量，使得空间的生产经营情况好转，像从外部获得哺育，这就是为什么要多建商铺少建监狱，因为正外部性的原理。
+  有秩序的市场交易产生了城市的**正外部性**，正外部性**，是否可以通过正外部性原理减少监狱用地，转为民用用地
  
   市场的目的是赢得时间性，并具有投机性，投机性和危机性在空间交易的双方非对称的出现，并迅速的形成幂率分布，将一部分人群抛弃但体系的利益分配之外，当一刀切政策的时候又突然陷入流动性危机危机性又向城市转移，两个过程都没能将无产阶级劳动者和经营者的时间性的产业纳入到范畴之中，完成转型，这也是是建筑学知识架构存在的根本问题。
 
-  在公平产权的空间分配中，市场和产业链交易产生的正外部性，共同庇护自由的人的空间经济基础主体，要实现盘活空间经济，建筑学要彻底否定过去的理论和体系，反对规范的教条主义左倾，和项目包装的破坏式创造右倾，从空间的时间数学上从零到一重新计算建筑设计的价值理性算法，
+  在公平产权的空间分配中，市场和产业链交易产生的正外部性，共同产生了小资产阶级的暂时具有历史时期的人和空间的空间资本主义，建筑学是否也要彻底否定过去的理论和体系，而回到一个基于本体论的核心为起点的从零到一，从空间的时间的计算上和阶级意识的价值理性定义上进行实践，
 
   用时间性跑赢阶级性，形成一种类似精算学科的防止城市破产的风险研究建筑学，用数学去对抗内卷的建筑学，因为当下空间经济的危机已经被挤压到近乎无法持续了，同时也要形成一种法哲学原理构建的社会科学的建筑学，时间性和阶级性的维度都是回到第一性原理，因为改革要跑赢革命需要的是一种建设性推翻。
  
