--- a/20230216001.md
+++ b/20230216001.md
@@ -1,7 +1,17 @@
-# 为什么货币包含无产阶级的全部劳动时间和无用阶级全部的社会总闲暇时间
+# 从货币学仲社会总闲暇时间可能成为零和游戏的论述
 
-
+从资产负债表的角度：
 资产=负债+所有者权益
+
+## 银行是如何将所有资产“吞噬”进抵押物权益的
+
+货币的发行表面上看起来是没有问题的，但是实际上银行在发行货币的过程中，**披着存款的幌子借款，披着借款的名义贷款**，由此产生了
+**所有者概念的偷换，和所有者权益的替换**
+举例来说
+假如银行从一个拥有黄金人的手中借取黄金，它需要给这个人一个借条，上面写上持有这个借条的人，可以行使的权益，和这个借条的所有者
+
+
+
 
 货币包含资产和所有者权益中的社会闲暇
 
@@ -51,7 +61,7 @@
 具体可以参考《银行如何通过扩张资产负债表发币和吞噬一切资产》
 
 
-## 国籍套住了各国无产阶级出卖劳动时间的地域
+## 户籍籍限制了各国无产阶级出卖劳动时间的地域范围
 
 由于
 货币=货币套取的社会总资产+社会总人群的闲暇时间
@@ -89,165 +99,6 @@
 社会闲暇的有效利用依赖于和稀缺资源批匹配产生有效劳动时间
 
 
-
-银行扩大资产负债表发行货币
-```
-       老百姓1                       银行          》
-资产         |负债       |资产       |负债
-银行借条第一张|放银行的银子|放银行的银子|银行借条第二张
-                        |放在银行的银子2|银行借条第3张
-                        |放在银行的银子3|银行借条4
-                        |银行借条4     |银行借条5
-                        |银行借条5     |    
-
-
-》    老百姓2                     老百姓3           》
-资产       |负债         |资产        |负债          
-银行借条第二张|放银行的银子2|银行借条第3张|放银行的银子3|
-
-》    老百姓4                      老百姓5                      》
-资产       |负债         |资产        |负债           
-银行借条4    |银行借条4     |银行借条5   |银行借条5 |
-
-
-```
-
-老百姓自己借钱僭越这个体系
-```
-
-
-       老百姓1                       老百姓5          
-资产         |负债            |资产            |负债
-    借条第一张|放老百姓1处的银子|放老百姓1处的银子|借条第二张
-
-```
-
-
-
-银行扩大资产负债表发行货币+资本主义购买无产阶级的劳动时间
-持有资产的是资产阶级
-持有银行借条的是有币阶级
-持有老百姓借条的是无产阶级劳动者
-不持有任何借条的是无用阶级
-
-```
-       老百姓1                       银行          》
-资产         |负债       |资产       |负债
-银行借条第一张|放银行的银子|放银行的银子|银行借条第二张
-                        |放在银行的银子2|银行借条第3张
-                        |放在银行的银子3|银行借条4
-                        |银行借条4     |银行借条5
-                        |银行借条5     |银行借条6
-                        |老百姓10的时间|银行借条7 
-                        |老百姓11的时间|    
-
-
-》     老百姓2                   老百姓3              》
-资产       |负债         |资产        |负债           
-银行借条第二张|放银行的银子2|银行借条第3张|放银行的银子3|
-
-
-》     老百姓4                   老百姓5              》
-资产       |负债           |资产        |负债           
-银行借条4    |银行借条4     |银行借条5   |银行借条5 |
-
-
-》    老百姓6                    老百姓7              》
-资产         |负债         |资产        |负债           
-银行借条4    |银行借条4     |银行借条5   |银行借条5 |
-
-
-》    老百姓8                   老百姓9               》
-资产       |负债           |资产        |负债           
-银行借条4    |银行借条4     |银行借条5   |银行借条5 |
-                          |银行借条6   |老百姓9的借条
-
-
-
-》    老百姓10                  老百姓11              》
-资产       |负债         |资产        |负债           
-老百姓9的借条|老百姓10的时间 |银行借条7   |老百姓11的时间 |
-
-
-```
-
-
-
-
-银行扩大资产负债表发行时间代币
-列宁的国家资本主义计划经济
-以粮票制度替代货币
-以权力结构直接剪刀差
-
-```
-       老百姓1                       银行          》
-资产         |负债       |资产       |负债
-银行借条第一张|放银行的银子|放银行的银子|银行借条第二张
-                        |放在银行的银子2|银行借条第3张
-                        |放在银行的银子3|银行借条4
-                        |银行借条4     |银行借条5
-                        |银行借条5     |银行借条6
-                        |老百姓10的时间|银行借条7 
-                        |老百姓11的时间|    
-
-
-》     老百姓2                   老百姓3              》
-资产       |负债         |资产        |负债           
-银行借条第二张|放银行的银子2|银行借条第3张|放银行的银子3|
-
-
-》     老百姓4                   老百姓5              》
-资产       |负债           |资产        |负债           
-银行借条4    |银行借条4     |银行借条5   |银行借条5 |
-
-
-》    老百姓6                    老百姓7              》
-资产         |负债         |资产        |负债           
-银行借条4    |银行借条4     |银行借条5   |银行借条5 |
-
-
-》    老百姓8                   老百姓9               》
-资产       |负债         |资产        |负债           
-银行借条4    |银行借条4     |银行借条5   |银行借条5 |
-
-
-
-》    老百姓10                  老百姓11              》
-资产       |负债         |资产        |负债           
-银行借条6  |老百姓10的时间 |银行借条7   |老百姓11的时间 |
-
-
-```
-
-
-
-老百姓自己借时间僭越这个体系
-```
-
-       老百姓1                       老百姓2          
-资产            |负债         |资产           |负债
-老百姓1发行的借条|老百姓1的时间 |老百姓1的时间   |老百姓2发行的借条
-
-```
-
-
-
-假如生产资料完全匹配劳动力 
-
-```
-
-
-       老百姓1                       老百姓3           》      
-资产         |负债         |资产            |负债
-    借条第一张|老百姓1的时间|老百姓1的时间|借条第二张
-
-》老百姓3                  老百姓4                   ......
-资产         |负债         |资产          |负债
-老百姓3的时间|银行借条第3张  |银行借条第3张 |老百姓4的时间|
-
-
-
-```
 
 
 
