--- a/20230216001.md
+++ b/20230216001.md
@@ -3,14 +3,67 @@
 从资产负债表的角度：
 资产=负债+所有者权益
 
-## 银行是如何将所有资产“吞噬”进抵押物权益的
+
+## 银行是如何将“吞噬”社会上的资产的
 
 货币的发行表面上看起来是没有问题的，但是实际上银行在发行货币的过程中，**披着存款的幌子借款，披着借款的名义贷款**，由此产生了
-**所有者概念的偷换，和所有者权益的替换**
+**所有者概念的偷换，和所有者权益的替换**的社会现象
+
 举例来说
-假如银行从一个拥有黄金人的手中借取黄金，它需要给这个人一个借条，上面写上持有这个借条的人，可以行使的权益，和这个借条的所有者
+
+假如有一间银行和两个老百姓，两个老百姓手中各自都有一个黄金
+
+假如银行从第一个拥有黄金人的手中借取黄金，它需要给这个人一个借条，上面写上持有这个借条的人，可以行使的权益，和这个借条的所有者这第
+一个人，但是银行发行出来的**货币并没有写上借条应该写上的文字**，而是以一个货币的符号和数字替代了货币的价值，因此货币的所有者
+和货币的权益，在纸张上被隐匿了。
+取而代之，人们为了图，对交易中的商品产生的价值分割能够方便，人们也默认了货币的数字，能够在社会上流通。表面上看起来，这是没有问题
+的，这个在货币后续的交易中产生了一个幌子。因此这里可以说，**货币对物品记价的功能是一个招牌**，而**货币隐匿了借条上的文字，这是一个幌子**。
+
+当第二个人也将它的黄金抵押进银行，换出一张货币的时候，这个幌子就在**货币可以以数字细分财产的价值的招牌**下运行了。也就是说，两个人开始
+持有这个借条的时候，借条的功能就货币化了，并且在数字替代所有者权益的借条文字的过程中，表面上看起来，商品的计价可以按照数学进行分割是有好处的
+但是坏处就是他们都没有发现，自己的资产在被银行披着抵押物的幌子吞噬。
+
+无论第二个人的黄金是抵押进银行换取货币进来，还是跟第一个人手里换取货币，把黄金给第一个人再给银行，第一个人再拿出第二张货币，两个人手上
+的黄金这个资产都被银行**披着“存”的幌子借**走了，或者说披着抵押的名义发行，因为两个黄金都是当事人自己的黄金，放在银行以后，黄金被定义
+为了银行的黄金，**黄金的所有者发生了转移**，本质上是借的行为而不是存的行为，除非黄金上 写了某人的名字，并且银行不能够兑付给第二个人，
+否则黄金都不是银行的黄金。所以**银行披着存的名义借是第二个幌子**
+
+这里银行吞噬了两笔黄金。社会上出现了黄金稀缺，也就是资产稀缺，造成了无产阶级和资产阶级的二分法。
+
+在实际上银行将第一张现金，从第一个人想给到第二个人的时候，这第二个猫腻就产生了。第二个人如果有黄金，要么他抵押进银行换钞票，要么跟第一个人再拿
+黄金从银行换银行的另一张钞票，反正银行换出来的钞票都在吞噬了社会上的资产
+
+货币在第一个人的手上，这个货币就是银行的负债，因为代表银行欠这个人一个黄金，因为货币的这张纸上应该写的欠条信息是，**银行欠这个人一个黄金，拥有
+这张欠条的个人可以从银行赎回这一个黄金**。但是假如这张欠条回流到了银行手里，这张货币就是银行的资产，理由是货币的上面写了，**银行欠这个人一个
+黄金，拥有这张欠条的个人可以从银行赎回这一个黄金**这两句话在银行持有的时候是矛盾的。**所有者发生了转移，从一个人变成了一个机构**，这是货
+币有可能产生的**第三个幌子**。这第二个幌子，以**银行可以人存钱的招牌**，运行起来了，实现了货币回流进银行，成为了银行的资产。
 
 
+黄金在银行的手上是银行的资产，当货币这个借条放在银行的手中时，其资产和负债相加本来应该等于零，但是经过一通操作以后，居然变成等于二。
+
+而且货币一旦到了第一个人的手上，这个逻辑就不再成立了，由于货币到了第一个人的手上，表面上看起来
+
+由于这个借条可以赎回第一个人抵押进银行的黄金，因此货币在第一个人手中
+
+成了第一个人的资产，表面上看起来这是没有问题的。但实际上是有问题的。
+
+
+所以货币的定义是
+
+
+
+隐匿了货币的赎回物，隐匿了货币的所有者，隐匿了货币所有者的权益的三个隐匿的幌子，披着可以对商品进行细分定价的招牌，偷偷的替换赎回物的所有者的名字，
+披着
+
+换屋所有者和
+
+
+从资产负债表的角度：
+资产=负债+所有者权益
+从黄金的角度：
+黄金=黄金的所有者+黄金的权益
+从货币的角度：
+货币=货币的所有有着+货币的权益+货币的赎回物
 
 
 货币包含资产和所有者权益中的社会闲暇
