--- a/20230216001.md
+++ b/20230216001.md
@@ -41,18 +41,21 @@
 
 黄金在银行的手上是银行的资产，当货币这个借条放在银行的手中时，其资产和负债相加本来应该等于零，但是经过一通操作以后，居然变成等于二。
 
-而且货币一旦到了第一个人的手上，这个逻辑就不再成立了，由于货币到了第一个人的手上，表面上看起来
+而且货币一旦到了第一个人的手上，货币的权益也不再成立了，由于权益只能行使一次，货币的权益变成了**既可以从银行兑换黄金，又可以购买他人的劳动力闲暇时间**，
+在**货币可以购买他人的劳动力的招牌**之下运行，造成了**既要又要和只能要一样之间相互矛盾**。
 
-由于这个借条可以赎回第一个人抵押进银行的黄金，因此货币在第一个人手中
-
-成了第一个人的资产，表面上看起来这是没有问题的。但实际上是有问题的。
-
-
-所以货币的定义是
+由于货币到了第一个人的手上，表面上看起来由于这个借条可以赎回第一个人抵押进银行的黄金，因此货币在第一个人手中成了第一个人的资产，表面上看起来这是没有问题的。
+但实际上在货币上本来应该用白纸黑字写上的货币的权力上是产生转移的。
 
 
+所以金本位时代，货币的定义是：
+**银行披着存黄金的幌子借黄金，在抵押发行的招牌运行下，将借条隐匿文字变成数字，然后偷换所有者和权益的概念，以避开挤兑黄金的白手套**
+也就是说对于银行来说：
+**货币=白手套**
 
-隐匿了货币的赎回物，隐匿了货币的所有者，隐匿了货币所有者的权益的三个隐匿的幌子，披着可以对商品进行细分定价的招牌，偷偷的替换赎回物的所有者的名字，
+
+对于存黄金的第一个老百姓
+货币隐匿了货币的赎回物的物权者，隐匿了货币的所有者，隐匿了货币所有者的权益的三个隐匿的幌子，披着可以对商品进行细分定价的招牌，偷偷的替换赎回物的所有者的名字，
 披着
 
 换屋所有者和
