--- a/20230216001.md
+++ b/20230216001.md
@@ -78,7 +78,7 @@
 
 主义的本质是区分我们和他们
 货币将社会划分为不持有和持有的两个阶级
-根据三权分立下的美国联邦储备法创造货币的过程，
+美国的货币政策是根据三权分立下的美国联邦储备法分散法权成为政治代币的过程，
 资本主义将有货币的人和没货币的人二分法为资产阶级和有时间资产的无产阶级+无用阶级
 因此确切的阶级划分是有货币阶级和无货币阶级
 
